Allow unauthorized access for now

--- a/Client/wwwroot/appsettings.json
+++ b/Client/wwwroot/appsettings.json
@@ -7,6 +7,7 @@
   "AzureAd": {
     "Authority": "https://login.microsoftonline.com/72f988bf-86f1-41af-91ab-2d7cd011db47",
     "ClientId": "2b62b041-9dc2-417e-b38b-8556f78e097f",
-    "ValidateAuthority": true
+    "ValidateAuthority": true,
+    "Audience": "https://microsoft.onmicrosoft.com/177e5287-d277-4d65-8e7b-77135c831bed/"
   }
 }
