--- a/Client/BuildWatch.Client.csproj
+++ b/Client/BuildWatch.Client.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Grpc.Net.Client.Web" Version="2.38.0" />
+    <PackageReference Include="Grpc.Net.ClientFactory" Version="2.38.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.0-preview.7.21378.6" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.0-preview.7.21378.6" PrivateAssets="all" />
     <PackageReference Include="Microsoft.Authentication.WebAssembly.Msal" Version="6.0.0-preview.7.21378.6" />
