Try auth with gRPC

--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -9,8 +9,7 @@ For more info see https://aka.ms/dotnet-template-ms-identity-platform
     "Domain": "microsoft.onmicrosoft.com",
     "TenantId": "72f988bf-86f1-41af-91ab-2d7cd011db47",
     "ClientId": "177e5287-d277-4d65-8e7b-77135c831bed",
-    "CallbackPath": "/signin-oidc",
-    "Audience": "https://microsoft.onmicrosoft.com/177e5287-d277-4d65-8e7b-77135c831bed/"
+    "CallbackPath": "/signin-oidc"
   },
   "Logging": {
     "LogLevel": {
